# campus-map

./: .cursorrules  .gitignore  Dockerfile  README.md  admin.py  alembic.ini  campus.db  donation_page.py  main.py  nixpacks.toml  pyproject.toml  requirements.txt  start.sh  visualization.py
.devcontainer/: devcontainer.json
migrations/: env.py
migrations/versions/: 001_initial.py  002_add_regions.py
models/: database.py
pages/: map.py  success.py
services/: api_client.py
tests/: test_clustering.py  test_donation_processor.py  test_stripe_checkout.py  test_stripe_webhook.py
utils/: coordinates.py
