[tool.poetry]
name = "campus-map"
version = "0.1.0"
description = ""
authors = ["Leo Guinan <leo.guinan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.40.1"
chromadb = "^0.5.20"
pandas = "^2.2.3"
faker = "^20.1.0"
pytest = "^7.4.3"
stripe = "^11.3.0"
scikit-learn = "^1.5.2"
plotly = "^5.24.1"
watchdog = "^6.0.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
