[tool.poetry]
name = "campus-map"
version = "0.1.0"
description = "Virtual Campus Map for Build in Public University"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
chromadb = "^0.5.20"
numpy = "~1.24.3"
faker = "*"
pytest = "*"
fastapi = "*"
stripe = "*"
python-dotenv = "*"
uvicorn = "*"
scikit-learn = "*"
streamlit = "*"
plotly = "*"
requests = "*"

[tool.poetry.group.production.dependencies]
pysqlite3-binary = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
