[tool.poetry]
name = "campus-map"
version = "0.1.0"
description = "Virtual Campus Map for Build in Public University"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
chromadb = "^0.5.20"
numpy = "^2.1.3"
faker = "*"
pytest = "*"
fastapi = "*"
stripe = "*"
python-dotenv = "*"
uvicorn = "*"
scikit-learn = "*"
streamlit = "*"
plotly = "*"
requests = "*"
psycopg2-binary = "*"
sqlalchemy = "*"
alembic = "*"

[tool.poetry.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 8000"
migrate = "alembic upgrade head"
dev = "uvicorn main:app --reload --host 0.0.0.0 --port 8000"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
